--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
       <div class="container">
         <div class="flex w-full">
           <div
-            class="h-[40px] w-[100vw] p-8 lg:bg-primary fixed flex justify-between items-center mx-0 lg:mx-auto lg:opacity-75"
+            class="h-[40px] w-[100vw] p-8 lg:bg-primary fixed flex justify-between items-center mx-0 lg:mx-auto lg:opacity-75 lg:border-b-2 lg:border-black"
           >
             <!-- humburger menu start -->
             <button
-              type="button"
               id="humburger-menu"
               name="humburger-menu"
-              class="flex flex-wrap justify-between items-center h-5 w-[30px] z-10 drop-shadow-md gap-2 lg:hidden"
+              class="flex flex-wrap justify-between items-center h-5 w-[30px] z-10 drop-shadow-md gap-2 lg:hidden -translate-x-[1000px] transition ease-in-out duration-500"
             >
               <span
                 class="w-[30px] h-[2px] bg-[#fff] transition duration-300 ease-in-out origin-top-left"
@@ -50,7 +49,7 @@
             <!-- navbar menu start -->
             <div
               id="navbar-menu"
-              class="w-full font-Macondo absolute lg:static -top-[1000px] lg:top-0 left-0 right-0 pt-20 lg:pt-4 pb-2 bg-primary lg:bg-transparent opacity-75 transition-all flex gap-2 flex-wrap lg:flex-nowrap lg:w-1/3 mx-0"
+              class="w-full font-Macondo absolute lg:static -top-[1000px] lg:top-0 left-0 right-0 pt-20 lg:pt-4 pb-2 bg-primary lg:bg-transparent opacity-75 flex gap-2 flex-wrap lg:flex-nowrap lg:w-1/3 mx-0 border-b-2 border-black lg:border-b-0 lg:border-transparent -translate-x-[1000px] transition-all duration-500"
             >
               <div
                 class="group w-full flex justify-center hover:cursor-pointer"
@@ -64,9 +63,9 @@
               </div>
               <div
                 class="group w-full flex justify-center hover:cursor-pointer"
-                for="about"
               >
                 <a
+                  href="#about"
                   class="block text-center relative after:content-[''] after:block after:w-full after:h-[0.1rem] after:bg-[#fff] after:scale-x-0 after:transition-transform after:origin-center group-hover:after:scale-x-50 group-hover:text-[#fff]"
                 >
                   ABOUT
@@ -96,7 +95,10 @@
             <!-- navbar menu end -->
 
             <!-- profile start -->
-            <div class="flex justify-center items-center gap-1 z-10">
+            <div
+              id="profile-hero"
+              class="flex justify-center items-center gap-1 z-10 translate-x-[1000px] transition ease-in-out duration-500"
+            >
               <div
                 id="profile-content"
                 class="flex-col opacity-0 lg:opacity-100 text-[90%] translate-x-12 lg:translate-x-0 transition duration-300 ease-in"
@@ -315,10 +317,102 @@
     <!-- education section end -->
 
     <!-- gallery section start -->
-    <section id="gallery" class="">
+    <section id="gallery" class="bg-secondary pt-28 lg:pt-56 pb-12 relative">
       <div class="container mx-auto">
-        <div class="flex flex-wrap">
-          <div class="border"></div>
+        <img
+          src="src/img/svg/Vector.svg"
+          alt="wave"
+          class="w-full absolute top-0 left-0"
+        />
+        <h1
+          class="text-primary after:border-primary primary-section text-[100px]"
+        >
+          GALLERY
+        </h1>
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 gap-y-12 px-6"
+        >
+          <div class="flex justify-center hover:brightness-125">
+            <div class="rounded-[50px] overflow-hidden border-4 border-white">
+              <img
+                src="src/img/gallery/gallery1.jpg"
+                alt="gallery1"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+              />
+            </div>
+          </div>
+          <div class="flex justify-center hover:brightness-125">
+            <div class="rounded-[50px] overflow-hidden border-4 border-white">
+              <img
+                src="src/img/gallery/gallery2.jpg"
+                alt="gallery2"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+              />
+            </div>
+          </div>
+          <div class="flex justify-center hover:brightness-125">
+            <div class="rounded-[50px] overflow-hidden border-4 border-white">
+              <img
+                src="src/img/gallery/gallery3.jpg"
+                alt="gallery3"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+              />
+            </div>
+          </div>
+          <div class="flex justify-center hover:brightness-125">
+            <div class="rounded-[50px] overflow-hidden border-4 border-white">
+              <img
+                src="src/img/gallery/gallery4.jpg"
+                alt="gallery4"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+              />
+            </div>
+          </div>
+          <div class="flex justify-center hover:brightness-125">
+            <div class="rounded-[50px] overflow-hidden border-4 border-white">
+              <img
+                src="src/img/gallery/gallery5.jpg"
+                alt="gallery5"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+              />
+            </div>
+          </div>
+          <div class="flex justify-center hover:brightness-125">
+            <div class="rounded-[50px] overflow-hidden border-4 border-white">
+              <img
+                src="src/img/gallery/gallery6.jpg"
+                alt="gallery6"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+              />
+            </div>
+          </div>
+          <div class="flex justify-center hover:brightness-125">
+            <div class="rounded-[50px] overflow-hidden border-4 border-white">
+              <img
+                src="src/img/gallery/gallery7.jpg"
+                alt="gallery7"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+              />
+            </div>
+          </div>
+          <div class="flex justify-center hover:brightness-125">
+            <div class="rounded-[50px] overflow-hidden border-4 border-white">
+              <img
+                src="src/img/gallery/gallery8.jpg"
+                alt="gallery8"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+              />
+            </div>
+          </div>
+          <div class="flex justify-center">
+            <div class="rounded-[50px] overflow-hidden border-4 border-white">
+              <img
+                src="src/img/gallery/gallery9.jpg"
+                alt="gallery9"
+                class="hover:scale-150 transition ease-out duration-500 hover:grayscale"
+              />
+            </div>
+          </div>
         </div>
       </div>
     </section>
